--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.sqljdbc4.jar=E:\\FPT University\\KY III\\PRJ 311\\Netbean\\PRJ311_DuyDT_JDBC_ContactDB\\jdbc\\sqljdbc4.jar
 file.reference.sqljdbc42.jar=D:\\SE05095\\Java Desktop\\SQL\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
@@ -43,7 +44,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.sqljdbc4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
