Add Borrowing Controller, LendingController, TradingDetail with DAO

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -56,6 +56,14 @@
         <servlet-name>TradingController</servlet-name>
         <servlet-class>com.controller.TradingController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>LendingController</servlet-name>
+        <servlet-class>com.controller.LendingController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>BorrowingController</servlet-name>
+        <servlet-class>com.controller.BorrowingController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/LoginController</url-pattern>
@@ -103,6 +111,14 @@
     <servlet-mapping>
         <servlet-name>TradingController</servlet-name>
         <url-pattern>/TradingController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LendingController</servlet-name>
+        <url-pattern>/LendingController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>BorrowingController</servlet-name>
+        <url-pattern>/BorrowingController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
